--- a/org.moneymanagerex.MMEX.yml
+++ b/org.moneymanagerex.MMEX.yml
@@ -18,6 +18,9 @@ finish-args:
   - --socket=wayland
   - --device=dri
   - --filesystem=home
+  - --filesystem=/mnt
+  - --filesystem=/run/media
+  - --filesystem=/media
   - --share=ipc
   - --share=network
 modules:
